/*
 * Copyright (c) 2020-present SMC Treviso s.r.l. All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "io.openk9.app.manager.grpc";
option java_outer_classname = "AppManagerProto";

package grpc;

service AppManager {
  rpc ApplyResource(AppManifest) returns (ApplyResponse) {}
  rpc DeleteAllResources(AppManifestList) returns (DeleteAllResourcesResponse) {}
  rpc DeleteResource(AppManifest) returns (google.protobuf.Empty) {}
  rpc CreateIngress(CreateIngressRequest) returns (CreateIngressResponse) {}
  rpc DeleteIngress(DeleteIngressRequest) returns (DeleteIngressResponse) {}
}

message AppManifest {
  string schemaName = 1;
  string chart = 2;
  string version = 3;
  optional string appName = 4;
  optional google.protobuf.Struct values = 5;
}

message AppManifestList {
  repeated AppManifest appManifests = 1;
}

message ApplyResponse {
  string status = 1;
}

message CreateIngressRequest {
  string schemaName = 1;
  string virtualHost = 2;
}

message CreateIngressResponse {
  string status = 1;
  string resourceName = 2;
}

message DeleteAllResourcesResponse {
  repeated DeleteResourceStatus deleteResourceStatus = 1;
}

message DeleteIngressRequest {
  string schemaName = 1;
  string virtualHost = 2;
}

message DeleteIngressResponse {
  string status = 1;
  string resourceName = 2;
}

message DeleteResourceStatus {
  Status status = 1;
  string resourceName = 2;
}

enum Status {
  ERROR = 0;
  SUCCESS = 1;
}